--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dnd-ar",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://evgeneoskin.github.io/pathfinder-ar/",
   "dependencies": {
     "aframe": "^0.7.1",
     "ar.js": "^1.4.10",
@@ -11,9 +12,14 @@
     "react-web-ar": "1.0.0-beta2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
